20131119
========
-Fixed comparison the data types distinct to String

20131114
========
-Added possibility to activate cache in the scan
-Fixed problem to retrieve long data, in the method processRow
-Modified getInputParameters to added information in the view about the parameters


20131104
========
-Fixed operators is_null and is_not_null.
-Added hbase shell query in the log and in the execution trace.
-Removes delegation of GE, GT, LE, LT operators due to the lack of a suitable
 comparator in HBase default installations.

20131025
========
-Added the StartRow and StopRow, let it the possibility this restriction in the queries.(trying to improve the preformance)
-Delegating the operators GE, GT, LE, LT to the customwrapper.
 
20131021
========
- Fixed returning result when a query by rowkey is empty, and comments log added

20131018
========
- Fixed escaping of special characters in LIKE operations, in order to correctly 
  generate an equivalent regular expression.


20131009
========
- Fixed 'let' filter by row_key